# laughing-memory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  SUMMARY.md  bot.py  bot_aiogram.py  docker-compose.yml  oauth_server.py  perplexity_client.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
app/: main.py
config/: constants.py  orchestrator.json
deploy/: nginx-oauth.conf  telegram-bot-web.service
docs/: PR_CHANGELOG_STAGES_1-6.md  audit_report.md  audit_summary.md  completion_plan.md  final_report.md  stage_6_5_pr.md  stages.md
nginx/: README.md  telegram-bot-oauth.conf
systemd/: README.md  telegram-bot.service
tests/: conftest.py  test_actions_log_store.py  test_actions_ui.py  test_aiogram_bridge.py  test_app_scheduler_event_loop.py  test_bot_identity.py  test_caldav_tools.py  test_calendar_backend.py  test_calendar_nlp.py  test_calendar_parse.py  test_calendar_reminders.py  test_calendar_store_migration.py  test_calendar_tool.py  test_contract_regressions.py  test_daily_digest.py  test_digest.py  test_document_reader.py  test_dry_run_mode.py  test_ensure_valid_extended.py  test_facts_render.py  test_google_oauth.py  test_google_token_store.py  test_health_config.py  test_identity.py  test_last_state_resolver.py  test_last_state_store.py  test_llm.py  test_log_level.py  test_logging_config.py  test_main_handlers.py  test_memory_context.py  test_memory_layers_context.py  test_memory_stage6.py  test_menu_smoke.py  (+45 more)
(+101 files in other folders)
